--- a/package.json
+++ b/package.json
@@ -35,13 +35,13 @@
     "types": "tsc -p jsconfig.json"
   },
   "devDependencies": {
-    "@types/express": "^4.17.18",
     "eslint": "^8.50.0",
     "express": "^4.18.2",
     "prettier": "^3.0.3",
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@types/express": "*",
     "modulepreload-link-relations": "^2.0.0"
   },
   "peerDependencies": {
